[package]
name = "braid_codebook"
version = "0.23.1"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
braid_consts = { path = "../braid_consts", version = "0.8.1", registry = "redpoll-crates" }
braid_stats = { path = "../braid_stats", version = "0.22.0", registry = "redpoll-crates" }
braid_utils = { path = "../braid_utils", version = "0.13.2", registry = "redpoll-crates" }
braid_data = { path = "../braid_data", version = "0.8.1", registry = "redpoll-crates" }
maplit = "1"
rv = { version = "0.15.0-rc.1", features = ["serde1"]}
rand = {version="0.8.5", features=["serde1"]}
thiserror = "1.0.11"
rayon = "1.5"
flate2 = "1.0.23"
polars = { version = "0.25.1", features = ["parquet", "json", "ipc", "dtype-full", "decompress"] }

[dev-dependencies]
tempfile = "3.3.0"
indoc = "*"
