[package]
name = "braid_data"
version = "0.8.1"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
braid_utils = { path = "../braid_utils", version = "0.13.1", registry = "redpoll-crates" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.19"
regex = "1"

[dev-dependencies]
approx = "0.5.1"
rand = {version="0.8", features=["serde1"]}
criterion = "0.2"
serde_json = "1"
