[package]
name = "braid_geweke"
version = "0.15.1"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
braid_stats = { path = "../braid_stats", version = "0.22.1", registry = "redpoll-crates" }
braid_utils = { path = "../braid_utils", version = "0.13.3", registry = "redpoll-crates" }
indicatif = "0.17"
rand = { version="0.8", features=["serde1"] }
rv = "0.15.0-rc.1"
