[package]
name = "lace_cc"
version = "0.3.0"
authors = ["Promised AI"]
edition = "2021"
exclude = ["tests/*", "resources/test/*", "target/*"]
license = "SSPL-1.0"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Core of the Lace cross-categorization engine library"

[dependencies]
lace_utils = { path = "../lace_utils", version = "0.1.2" }
lace_stats = { path = "../lace_stats", version = "0.1.5" }
lace_geweke = { path = "../lace_geweke", version = "0.1.3" }
lace_consts = { path = "../lace_consts", version = "0.1.4" }
lace_data = { path = "../lace_data", version = "0.1.2" }
lace_codebook = { path = "../lace_codebook", version = "0.3.0" }
rand = {version="0.8", features=["serde1"]}
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
enum_dispatch = "0.3.10"
thiserror = "1.0.19"
rand_xoshiro = { version="0.6", features = ["serde1"] }
special = "0.10"
itertools = "0.11"
indicatif = "0.17.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5"
indoc = "2.0.3"

[[bench]]
name = "state_types"
harness = false

[[bench]]
name = "all_algs"
harness = false

[[bench]]
name = "feature_prior_update"
harness = false

[[bench]]
name = "massflip"
harness = false
