[package]
name = "lace_codebook"
version = "0.5.0"
authors = ["Promised.ai"]
edition = "2021"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Contains the Lace codebook specification as well as utilities for generating defaults"

[dependencies]
lace_consts = { path = "../lace_consts", version = "0.2.1" }
lace_stats = { path = "../lace_stats", version = "0.2.1" }
lace_utils = { path = "../lace_utils", version = "0.2.0" }
lace_data = { path = "../lace_data", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
thiserror = "1.0.11"
polars = { version = "0.36", default_features=false, features=["csv", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16"] }

[features]
latent = []
experimental = [
    "lace_stats/experimental", 
    "lace_data/experimental"
]
formats = ["polars/json", "polars/ipc", "polars/decompress", "polars/parquet"]

[dev-dependencies]
tempfile = "3.3.0"
indoc = "2"
