[package]
name = "lace_consts"
version = "0.2.1"
authors = ["Promied AI"]
edition = "2021"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Default constants for Lace"

[dependencies]
# rv = { path = "/Users/bax/Documents/redpoll/rv", features = ["serde1", "arraydist", "experimental"] }
rv = { git = "https://gitlab.com/baxe/rv.git", branch="feature/experimental", features = ["serde1", "arraydist", "experimental"] }
# rv = { version = "0.16.2", features = ["serde1", "arraydist"] }
