[package]
name = "lace_consts"
version = "0.2.1"
authors = ["Promied AI"]
edition = "2021"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Default constants for Lace"

[dependencies]
# rv = { version = "0.16.3", features = ["serde1", "arraydist"] }
rv = { git = "https://github.com/promised-ai/rv.git", branch = "cs-experimental", features = ["serde1", "arraydist"] }
