[package]
name = "lace_data"
version = "0.1.0"
authors = ["Promised AI"]
edition = "2021"
license = "SSPL-1.0"

[dependencies]
lace_utils = { path = "../lace_utils", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.19"
regex = "1"

[dev-dependencies]
approx = "0.5.1"
rand = {version="0.8", features=["serde1"]}
criterion = "0.2"
serde_json = "1"
