[package]
name = "lace_data"
version = "0.1.1"
authors = ["Promised AI"]
edition = "2021"
license = "SSPL-1.0"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Data definitions and data container definitions for Lace"

[dependencies]
lace_utils = { path = "../lace_utils", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.19"
regex = "1"

[dev-dependencies]
approx = "0.5.1"
rand = {version="0.8", features=["serde1"]}
criterion = "0.4"
serde_json = "1"
