[package]
name = "lace_data"
version = "0.3.0"
authors = ["Promised AI"]
edition = "2021"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Data definitions and data container definitions for Lace"

[dependencies]
lace_utils = { path = "../lace_utils", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.19"

[dev-dependencies]
approx = "0.5.1"
serde_json = "1"
