[package]
name = "lace_flippers"
version = "0.1.0-alpha.1"
authors = ["Promised AI"]
edition = "2021"

[dependencies]
lace_utils = { path = "../lace_utils", version = "0.1.0-alpha.1" }
rand = {version="0.8", features=["serde1"]}
rayon = "1"

[dev-dependencies]
criterion = "0.2"
rand_xoshiro = "0.6"

[[bench]]
name = "benches"
harness = false
