[package]
name = "lace_geweke"
version = "0.1.0"
authors = ["Promised AI"]
edition = "2021"
license = "SSPL-1.0"

[dependencies]
lace_stats = { path = "../lace_stats", version = "0.1.0" }
lace_utils = { path = "../lace_utils", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
indicatif = "0.17"
rand = { version="0.8", features=["serde1"] }
