[package]
name = "lace_metadata"
version = "0.1.0"
authors = ["Promised AI"]
edition = "2021"

[dependencies]
lace_stats = { path = "../lace_stats", version = "0.1.0-alpha.1" }
lace_data = { path = "../lace_data", version = "0.1.0-alpha.1" }
lace_codebook = { path = "../lace_codebook", version = "0.1.0-alpha.1" }
lace_cc = { path = "../lace_cc", version = "0.1.0-alpha.1" }
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
serde_json = "1"
toml = "0.5"
bincode = "1"
ring = "0.16.20"
log = "0.4"
rand_xoshiro = { version="0.6", features = ["serde1"] }
thiserror = "1.0.19"
once_cell = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
