[package]
name = "lace_metadata"
version = "0.5.0"
authors = ["Promised AI"]
edition = "2021"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Archive of the metadata (savefile) formats for Lace. In charge of versioning and conversion."

[dependencies]
lace_stats = { path = "../lace_stats", version = "0.2.1" }
lace_data = { path = "../lace_data", version = "0.2.0" }
lace_codebook = { path = "../lace_codebook", version = "0.5.0" }
lace_cc = { path = "../lace_cc", version = "0.5.0" }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
serde_json = "1"
toml = "0.7"
bincode = "1"
log = "0.4"
rand_xoshiro = { version="0.6", features = ["serde1"] }
thiserror = "1.0.19"
once_cell = "1"
hex = "0.4"
rayon = "1.5"

[dev-dependencies]
tempfile = "3"
