[package]
name = "lace_preprocess_mdbook_yaml"
version = "0.1.0"
authors = ["Promised AI"]
edition = "2021"
license = "SSPL-1.0"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Miscellaneous utilities for Lace and shared libraries"

[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mdbook-lace-preprocess-yaml"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "4.2"
env_logger = "0.9"
lace_codebook = { path = "../lace_codebook", version = "0.1.0" }
lace_stats = { path = "../lace_stats", version = "0.1.0" }
log = "0.4"
mdbook = "0.4"
pulldown-cmark = { version = "0.9", default-features = false }
regex = "1"
semver = "1.0"
serde = "1"
serde_json = "1.0"
serde_yaml = "0.9.4"
