[package]
name = "lace_stats"
version = "0.1.0-alpha.1"
authors = ["Promised AI"]
edition = "2021"
license = "SSPL-1.0"

[dependencies]
lace_utils = { path = "../lace_utils", version = "0.1.0-alpha.1" }
lace_consts = { path = "../lace_consts", version = "0.1.0-alpha.1" }
lace_data = { path = "../lace_data", version = "0.1.0-alpha.1" }
special = "0.8"
rand = {version="0.8", features=["serde1"]}
rand_xoshiro = "0.6"
itertools = "0.10.3"
serde = { version = "1", features = ["derive"] }
regex = "1.6.0"
thiserror = "1.0.11"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.2"
maplit = "1"
rand_distr = "0.4"
serde_json = "1"

[[bench]]
name = "labeler"
harness = false

[[bench]]
name = "seq"
harness = false

[[bench]]
name = "simplex"
harness = false
