[package]
name = "lace_stats"
version = "0.3.0"
rust-version = "1.62.0"
authors = ["Promised AI"]
edition = "2021"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Contains component model and hyperprior specifications"

[dependencies]
lace_utils = { path = "../lace_utils", version = "0.3.0" }
lace_consts = { path = "../lace_consts", version = "0.2.1" }
lace_data = { path = "../lace_data", version = "0.3.0" }
special = "0.10"
rand = {version="0.8", features=["serde1"]}
itertools = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.11"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5"
rand_distr = "0.4"

[[bench]]
name = "seq"
harness = false

[[bench]]
name = "simplex"
harness = false
