[package]
name = "lace_utils"
version = "0.2.0"
authors = ["Promised AI"]
edition = "2021"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "Miscellaneous utilities for Lace and shared libraries"

[dependencies]
rand = {version="0.8", features=["serde1"]}

[dev-dependencies]
approx = "0.5.1"
